# quiz-master-mad2

./: .gitignore  Makefile  README.md  check.py  pyproject.toml  run  run.sh
database/: quiz_master.db
docs/: API Design.md  Database Design.md  Database Fix.md  MAD 1 Project.md  MAD 2 Project.md  Project Documentation.md
quiz-api/: .env.example  .pre-commit-config.yaml  Makefile  README.md  openapi.yaml  pyproject.toml  run.sh
quiz-api/migrations/: env.py
quiz-api/migrations/versions/: 0b6d43fcaefc_initial.py  2b0ed94be97c_initial_migration.py  4cc6fd5479f8_update_database_schema.py  6ee5aa684a60_added.py
quiz-api/src/quiz_api/: __init__.py  config.py  errors.py  main.py  utils.py
quiz-api/src/quiz_api/models/: database.py  models.py  schemas.py
quiz-api/src/quiz_api/routes/: admin.py  auth.py  chapters.py  home.py  questions.py  quiz_attempts.py  quiz_registration.py  quizzes.py  subjects.py
quiz-api/src/quiz_api/utils/: __init__.py  auth.py  fts.py  search.py
quiz-api/static/templates/: home.html
quiz-api/tests/: __init__.py  conftest.py
quiz-api/tests/fixtures/: __init__.py  api_client.py  mocked_sqlite.py
quiz-api/tests/unit_tests/: __init__.py
quiz-api/tests/unit_tests/routes/: test__admin_error_cases.py  test__admin_happy_path.py  test__auth_error_cases.py  test__auth_happy_path.py  test__chapters_error_cases.py  test__chapters_happy_path.py  test__questions_error_cases.py  test__questions_happy_path.py  test__quiz_attempt_error_cases.py  test__quiz_attempt_happy_path.py  test__quizzes_error_cases.py  test__quizzes_happy_path.py  test__search_chapters.py  test__search_quizzes.py  test__search_subjects.py  test__search_users.py  test__subjects_error_cases.py  test__subjects_happy_path.py
quiz-web/: .env.js.example  README.md  index.html  package.json
quiz-web/css/: quiz-pages.css  style.css
quiz-web/js/: api.js  auth.js  authHandlers.js  config.js  profileHandlers.js  timer.js  utils.js
quiz-web/js/api/: auth.js  chapters.js  questions.js  quiz_attempts.js  quiz_registration.js  quizzes.js  subjects.js  users.js
quiz-web/js/components/: layout.js  navigation.js  search.js  ui.js
quiz-web/js/pages/chapters/: edit.js  list.js  search.js
quiz-web/js/pages/questions/: edit.js  list.js
quiz-web/js/pages/quizzes/: edit.js  list.js  search.js
quiz-web/js/pages/subjects/: edit.js  list.js  search.js
quiz-web/js/pages/users/: chapter-quizzes.js  chapters.js  list.js  my-quizzes.js  quiz-result-detailed.js  quiz-result.js  quizzes.js  search.js  subjects.js  take-quiz.js
quiz-web/js/pages/users/search/: chapters.js  quizzes.js  subjects.js
quiz-web/pages/: hello.html  profile.html
quiz-web/pages/admin/: quizzes.html  users.html  usersSearch.html
quiz-web/pages/admin/chapters/: edit.html  list.html  search.html
quiz-web/pages/admin/questions/: edit.html  list.html
quiz-web/pages/admin/quizzes/: edit.html  list.html  search.html
quiz-web/pages/admin/subjects/: edit.html  list.html  search.html
quiz-web/pages/auth/: login.html  register.html
quiz-web/pages/users/: list-past-quiz-questions.html  my-quizzes.html  quiz-result-detailed.html  quiz-result.html  quizzes.html  take-quiz.html
quiz-web/pages/users/list/: chapters.html  quizzes.html  subjects.html
quiz-web/pages/users/search/: chapters.html  quizzes.html  subjects.html
