[project]
name = "quiz-api"
authors = [
    { name = "Amit Vikram Raj", email = "21f3002226@ds.study.iitm.ac.in" },
]
description = "Python package description for quiz_api"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["python"]
license = { text = "MIT" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    'importlib-metadata; python_version>="3.11"',
    "sqlalchemy",
    # 'flask',
    "flask>=2.0.0,<3.0.0",
    "werkzeug>=2.0.0,<3.0.0",
    'flask-sqlalchemy',
    "pydantic[email]>=2.5.3",
    "flask-pydantic>=0.12.0",
    "flask-jwt-extended>=4.7.1",
    "python-dotenv>=1.0.1",
    "flask-cors>=5.0.0",
    "gunicorn>=23.0.0",
    "flask-migrate>=4.1.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
release = ["build", "twine"]
static-code-qa = [
    "pre-commit",
    "pylint",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "Flake8-pyproject",
    "radon",
]
dev = ["quiz_api[test,release,static-code-qa]"]

# docs: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
[tool.setuptools.dynamic]
version = { file = "version.txt" }

[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]