[project]
name = "quiz-api"
version = "0.1.0"
description = "Python package for quiz_api"
readme = "README.md"
authors = [
    { name = "Amit Vikram Raj", email = "21f3002226@ds.study.iitm.ac.in" },
]
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy",
    # 'flask',
    "flask>=2.0.0,<3.0.0",
    "werkzeug>=2.0.0,<3.0.0",
    'flask-sqlalchemy',
    "pydantic[email]>=2.5.3",
    "flask-pydantic>=0.12.0",
    "flask-jwt-extended>=4.7.1",
    "python-dotenv>=1.0.1",
    "flask-cors>=5.0.0",
    "gunicorn>=23.0.0",
    "flask-migrate>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = ["pytest>=7.4.4", "pytest-cov>=4.1.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
